# web_backend

./: .dockerignore  .dockerignore.heartbeat  .env.example  .env.migration  .env.migration.example  .env.self_example  .gitignore  ADMIN_PANEL_IMPLEMENTATION.md  CLAUDE.md  Dockerfile  Dockerfile.fc  Dockerfile.heartbeat  FREE_PLAN_IMPLEMENTATION.md  PASSWORD_RECOVERY_README.md  R2_PACKAGE_SYSTEM.md  compose.easy.db.yaml  compose.local.yaml  compose.production.yaml  compose.yaml  debug_recall.py  docker-compose-supabase.yml  docker-compose.heartbeat.yml  docker-compose.yml  gunicorn_config.py  main.py  pyproject.toml  qk_dr_p.sh  readme.md  requirements.txt  run.py  test_free_plan_api.py  test_free_plan_logic.py  test_main.py  test_ticket_api.py
.serena/: project.yml
center_management/: README_orchestrationer.md  __init__.py  backend_api_v2.py  backend_api_v3.py  data_integrate.py  deploy_and_dns.py  deploy_and_init.py  dns.py  init_env.sh  link_verificate.sh  node_manage.py  node_meta.py  orchestrationer.py  quick_proxy.sh  server_detail.ini  smart_port_manager.py  test_api.py  test_api_v2.py  test_last.py  vps_vultur_manage.py
deployment/: .env.fc.example  .terraform.lock.hcl  FC_DEPLOYMENT_GUIDE.md  README.md  README_FC.md  build_and_push_image.sh  deploy.sh  deploy_ali_preview.sh  deploy_fc.sh  preview_dns.py  terraform.tf  terraform_fc.tf  terraform_fc.tfvars.example  terraform_fc_variables.tf  web_backend.logrotate  web_backend.service
dev/: heartbeat_detector.py  init_env.sh
docs/: CHANGELOG_orchestrationer_ip_whitelist.md  HARDCODED_VARIABLES_ANALYSIS.md  HEARTBEAT_DETECTOR.md  TICKET_REPLY_README.md  TODO.md
heartbeat_standalone/: .dockerignore  Dockerfile  README.md  config.json  docker-compose.yml  heartbeat_config.json  heartbeat_detector.py  pyproject.toml  run.sh  test_heartbeat.py
(+178 files in other folders)
